syntax = "proto3";

package payment.v1;

import "common/v1/common.proto";

// Payment method enum
enum PaymentMethod {
  PAYMENT_METHOD_UNSPECIFIED = 0;
  PAYMENT_METHOD_VNPAY = 1;
  PAYMENT_METHOD_MOMO = 2;
  PAYMENT_METHOD_BANK_TRANSFER = 3;
}

// Payment status enum
enum PaymentStatus {
  PAYMENT_STATUS_UNSPECIFIED = 0;
  PAYMENT_STATUS_PENDING = 1;
  PAYMENT_STATUS_COMPLETED = 2;
  PAYMENT_STATUS_FAILED = 3;
  PAYMENT_STATUS_CANCELLED = 4;
}

// Payment message
message Payment {
  int64 id = 1;
  int64 account_id = 2;
  PaymentMethod method = 3;
  PaymentStatus status = 4;
  int64 total = 5;
  int64 date_created = 6;
}

// Get payment request
message GetPaymentRequest {
  int64 id = 1;
}

message GetPaymentResponse {
  Payment payment = 1;
}

// List payments request
message ListPaymentsRequest {
  common.v1.PaginationParams pagination = 1;
  optional string id = 2;
  optional int64 account_id = 3;
  optional PaymentMethod method = 4;
  optional PaymentStatus status = 5;
  optional int64 date_created_from = 6;
  optional int64 date_created_to = 7;
}

// List payments response
message ListPaymentsResponse {
  repeated Payment payments = 1;
  common.v1.PaginateResult pagination = 2;
}

// Create payment request
message CreatePaymentRequest {
  PaymentMethod method = 1;
  int64 total = 2;
}

// Create payment response
message CreatePaymentResponse {
  Payment payment = 1;
}

// Update payment request
message UpdatePaymentRequest {
  int64 id = 1;
  optional PaymentMethod method = 2;
  optional PaymentStatus status = 3;
  optional int64 total = 4;
}

// Update payment response
message UpdatePaymentResponse {
  Payment payment = 1;
}

// Delete payment request
message DeletePaymentRequest {
  int64 id = 1;
}

// Delete payment response
message DeletePaymentResponse {}

// Payment item message
message PaymentItem {
  int64 id = 1;
  int64 payment_id = 2;
  string name = 3;
  int64 price = 4;
}

// Create payment item request
message CreatePaymentItemRequest {
  int64 payment_id = 1;
  string name = 2;
  int64 price = 3;
}

// Create payment item response
message CreatePaymentItemResponse {
  PaymentItem payment_item = 1;
}

// VNPAY payment message
message VNPAYPayment {
  int64 id = 1;
  string vnp_txn_ref = 2;
  string vnp_order_info = 3;
  string vnp_transaction_no = 4;
  string vnp_transaction_date = 5;
  string vnp_create_date = 6;
  string vnp_ip_addr = 7;
}

// Create VNPAY payment request
message CreateVNPAYPaymentRequest {
  int64 id = 1;
  string vnp_txn_ref = 2;
  string vnp_order_info = 3;
  string vnp_transaction_no = 4;
  string vnp_transaction_date = 5;
  string vnp_create_date = 6;
  string vnp_ip_addr = 7;
}

// Create VNPAY payment response
message CreateVNPAYPaymentResponse {
  VNPAYPayment vnpay_payment = 1;
}

// Payment service definition
service PaymentService {
  // Get payment by ID
  rpc GetPayment(GetPaymentRequest) returns (GetPaymentResponse) {}

  // List payments
  rpc ListPayments(ListPaymentsRequest) returns (ListPaymentsResponse) {}

  // Create payment
  rpc CreatePayment(CreatePaymentRequest) returns (CreatePaymentResponse) {}

  // Update payment
  rpc UpdatePayment(UpdatePaymentRequest) returns (UpdatePaymentResponse) {}

  // Delete payment
  rpc DeletePayment(DeletePaymentRequest) returns (DeletePaymentResponse) {}

  // Create payment item
  rpc CreatePaymentItem(CreatePaymentItemRequest) returns (CreatePaymentItemResponse) {}

  // Create VNPAY payment
  rpc CreateVNPAYPayment(CreateVNPAYPaymentRequest) returns (CreateVNPAYPaymentResponse) {}
}
